--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,98 +1,3 @@
 <header class="header">
-	<div class="container-bigger header__container">
-		<button class="btn btn-reset header__btn">Call Back</button>
-		<nav class="nav" title="Главная панель навигации">
-			<ul class="nav__list list-reset">
-				<li class="nav__item">
-					<a href="#" class="nav__link">Home</a>
-				</li>
-				<li class="nav__item">
-					<a href="#" class="nav__link">Shop</a>
-				</li>
-				<li class="nav__item">
-					<a href="#" class="nav__link">Showroom</a>
-				</li>
-				<li class="nav__item">
-					<a href="#" class="nav__link">Shipping and delivery</a>
-				</li>
-				<li class="nav__item">
-					<a href="#" class="nav__link">Warranty</a>
-				</li>
-			</ul>
-			<a href="#" class="nav__link nav__link-logo"
-				><img src="./img/logo.png" class="nav__logo" alt="Логотип"
-			/></a>
-			<ul class="nav__list list-reset">
-				<li class="nav__item">
-					<a href="#" class="nav__link">Returns</a>
-				</li>
-				<li class="nav__item">
-					<a href="#" class="nav__link">Contact Us</a>
-				</li>
-				<li class="nav__item">
-					<a href="#" class="nav__link"
-						>FAQ<span class="nav__link-undercase">s</span></a
-					>
-				</li>
-				<li class="nav__item">
-					<a href="#" class="nav__link">About us</a>
-				</li>
-				<li class="nav__item">
-					<a href="#" class="nav__link">Warranty</a>
-				</li>
-			</ul>
-		</nav>
-		<div class="header__activity activity">
-			<ul class="activity__list list-reset">
-				<li class="activity__item">
-					<a href="#" class="activity__link">
-						<img
-							loading="lazy"
-							src="./img/search.svg"
-							class="image"
-							width="20"
-							height="20"
-							alt="Иконка поиска"
-						/>
-					</a>
-				</li>
-				<li class="activity__item">
-					<a href="#" class="activity__link">
-						<img
-							loading="lazy"
-							src="./img/heart.svg"
-							class="image"
-							width="20"
-							height="20"
-							alt="Иконка сердца"
-						/>
-					</a>
-				</li>
-				<li class="activity__item">
-					<a href="#" class="activity__link">
-						<img
-							loading="lazy"
-							src="./img/bag.svg"
-							class="image"
-							width="20"
-							height="20"
-							alt="Иконка корзины"
-						/>
-					</a>
-				</li>
-				<li class="activity__item">
-					<a href="#" class="activity__link">
-						<img
-							loading="lazy"
-							src="./img/user.svg"
-							class="image"
-							width="20"
-							height="20"
-							alt="Иконка пользователя"
-						/>
-					</a>
-				</li>
-			</ul>
-		</div>
-	</div>
+	<div class="container-bigger header__container"></div>
 </header>
