--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,6 +7,10 @@
 		align-items: center;
 	}
 
+	&__content {
+		background-color: red;
+	}
+
 	&__btn {
 		color: var(--white-color);
 		text-transform: uppercase;
