--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,51 @@
 <header class="header">
-	<div class="container-bigger header__container"></div>
+	<div class="container-bigger header__container">
+		<button class="btn-reset header__btn">Call Back</button>
+		<div class="container header__content">
+			<nav class="nav" title="Навигационная панель">
+				<ul class="nav__list list-reset">
+					<li class="nav__item">
+						<a href="#" class="nav__link">Home</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">Shop</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">ShowRoom</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">Shipping and delivery</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">Warranty</a>
+					</li>
+				</ul>
+				<img
+					src="./img/logo.png"
+					alt="Логотип компании"
+					class="header__logo"
+				/>
+				<ul class="nav__list list-reset">
+					<li class="nav__item">
+						<a href="#" class="nav__link">Returns</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">Contact Us</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link"
+							>FAQ<span class="text-lowercase">s</span></a
+						>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">About Us</a>
+					</li>
+					<li class="nav__item">
+						<a href="#" class="nav__link">Warranty</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+		<h1>asdasd</h1>
+	</div>
 </header>
