header activity started

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,48 +4,103 @@
 		<div class="container header__content">
 			<nav class="nav" title="Навигационная панель">
 				<ul class="nav__list list-reset">
-					<li class="nav__item">
-						<a href="#" class="nav__link">Home</a>
+					<li class="nav__item nav__item-left">
+						<a
+							href="#"
+							class="nav__link nav__link-left nav__link-active"
+							>Home</a
+						>
 					</li>
-					<li class="nav__item">
-						<a href="#" class="nav__link">Shop</a>
+					<li class="nav__item nav__item-left">
+						<a href="#" class="nav__link nav__link-left">Shop</a>
 					</li>
-					<li class="nav__item">
-						<a href="#" class="nav__link">ShowRoom</a>
+					<li class="nav__item nav__item-left">
+						<a href="#" class="nav__link nav__link-left"
+							>ShowRoom</a
+						>
 					</li>
-					<li class="nav__item">
-						<a href="#" class="nav__link">Shipping and delivery</a>
+					<li class="nav__item nav__item-left">
+						<a href="#" class="nav__link nav__link-left"
+							>Shipping and delivery</a
+						>
 					</li>
-					<li class="nav__item">
-						<a href="#" class="nav__link">Warranty</a>
+					<li class="nav__item nav__item-left">
+						<a href="#" class="nav__link nav__link-left"
+							>Warranty</a
+						>
 					</li>
 				</ul>
 				<img
 					src="./img/logo.png"
 					alt="Логотип компании"
-					class="header__logo"
+					class="nav__logo"
 				/>
 				<ul class="nav__list list-reset">
-					<li class="nav__item">
+					<li class="nav__item nav__item-right">
 						<a href="#" class="nav__link">Returns</a>
 					</li>
-					<li class="nav__item">
+					<li class="nav__item nav__item-right">
 						<a href="#" class="nav__link">Contact Us</a>
 					</li>
-					<li class="nav__item">
+					<li class="nav__item nav__item-right">
 						<a href="#" class="nav__link"
 							>FAQ<span class="text-lowercase">s</span></a
 						>
 					</li>
-					<li class="nav__item">
+					<li class="nav__item nav__item-right">
 						<a href="#" class="nav__link">About Us</a>
 					</li>
-					<li class="nav__item">
+					<li class="nav__item nav__item-right">
 						<a href="#" class="nav__link">Warranty</a>
 					</li>
 				</ul>
 			</nav>
 		</div>
-		<h1>asdasd</h1>
+		<ul class="activity__list list-reset">
+			<li class="activity__item">
+				<a href="#">
+					<img
+						loading="lazy"
+						src="./img/search.svg"
+						class="image"
+						width="20"
+						height="20"
+						alt="Иконка поиска"
+				/></a>
+			</li>
+			<li class="activity__item">
+				<a href="#">
+					<img
+						loading="lazy"
+						src="./img/heart.svg"
+						class="image"
+						width="20"
+						height="20"
+						alt="Иконка сердца"
+				/></a>
+			</li>
+			<li class="activity__item">
+				<a href="#">
+					<img
+						loading="lazy"
+						src="./img/bag.svg"
+						class="image"
+						width="20"
+						height="20"
+						alt="Иконка корзины"
+				/></a>
+			</li>
+			<li class="activity__item">
+				<a href="#">
+					<img
+						loading="lazy"
+						src="./img/user.svg"
+						class="image"
+						width="20"
+						height="20"
+						alt="Иконка личного кабинета222"
+				/></a>
+			</li>
+		</ul>
 	</div>
 </header>
