--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,5 +6,8 @@
 
 // подключения компонентов страницы
 @import "./components/header";
+@import "./components/btn";
 @import "./components/nav";
 @import "./components/activity";
+@import "./components/hero";
+@import "./components/slide";
