--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="container-bigger header__container">
-		<button class="btn-reset header__btn">Call Back</button>
-		<div class="container header__content">
+		<button class="btn-reset btn__primary">Call Back</button>
+		<div class="container-smaller header__content">
 			<nav class="nav" title="Навигационная панель">
 				<ul class="nav__list list-reset">
 					<li class="nav__item nav__item-left">
