--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -98,7 +98,7 @@
 						class="image"
 						width="20"
 						height="20"
-						alt="Иконка личного кабинета222"
+						alt="Иконка личного кабинета"
 				/></a>
 			</li>
 		</ul>
