--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,12 +5,12 @@
 				<div class="swiper-slide slide">
 					<img src="./img/slide1img.png" alt="Изображение слайда" />
 					<div class="slide__info">
-						<ul class="slide__prices list-reset">
-							<li class="slide__price slide__price-old">
+						<div class="slide__prices list-reset">
+							<div class="slide__price slide__price-old">
 								$2,000.00
-							</li>
-							<li class="slide__price">$1,475.00</li>
-						</ul>
+							</div>
+							<div class="slide__price">$1,475.00</div>
+						</div>
 						<h3 class="slide__title">
 							Willow Collections Santa Monica Solid Teak
 						</h3>
@@ -25,7 +25,71 @@
 						</div>
 					</div>
 				</div>
+				<div class="swiper-slide slide">
+					<img src="./img/slide1img.png" alt="Изображение слайда" />
+					<div class="slide__info">
+						<div class="slide__prices list-reset">
+							<div class="slide__price slide__price-old">
+								$2,000.00
+							</div>
+							<div class="slide__price">$1,475.00</div>
+						</div>
+						<h3 class="slide__title">Второй слайд</h3>
+						<p class="slide__text">
+							Wood Right Vanity in Grey Washed with 5 cm Calacatta
+							Quartz
+						</p>
+						<div class="btn__container">
+							<button class="btn-reset btn__primary">
+								Shop Now
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide slide">
+					<img src="./img/slide1img.png" alt="Изображение слайда" />
+					<div class="slide__info">
+						<div class="slide__prices list-reset">
+							<div class="slide__price slide__price-old">
+								$2,000.00
+							</div>
+							<div class="slide__price">$1,475.00</div>
+						</div>
+						<h3 class="slide__title">Третий слайд</h3>
+						<p class="slide__text">
+							Wood Right Vanity in Grey Washed with 5 cm Calacatta
+							Quartz
+						</p>
+						<div class="btn__container">
+							<button class="btn-reset btn__primary">
+								Shop Now
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide slide">
+					<img src="./img/slide1img.png" alt="Изображение слайда" />
+					<div class="slide__info">
+						<div class="slide__prices list-reset">
+							<div class="slide__price slide__price-old">
+								$2,000.00
+							</div>
+							<div class="slide__price">$1,475.00</div>
+						</div>
+						<h3 class="slide__title">Четверный слайд</h3>
+						<p class="slide__text">
+							Wood Right Vanity in Grey Washed with 5 cm Calacatta
+							Quartz
+						</p>
+						<div class="btn__container">
+							<button class="btn-reset btn__primary">
+								Shop Now
+							</button>
+						</div>
+					</div>
+				</div>
 			</div>
+			<div class="swiper-pagination"></div>
 		</div>
 	</div>
 </section>
