--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -34,7 +34,9 @@
 							</div>
 							<div class="slide__price">$1,475.00</div>
 						</div>
-						<h3 class="slide__title">Второй слайд</h3>
+						<h3 class="slide__title">
+							Willow Collections Santa Monica Solid Teak
+						</h3>
 						<p class="slide__text">
 							Wood Right Vanity in Grey Washed with 5 cm Calacatta
 							Quartz
@@ -89,7 +91,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="swiper-pagination"></div>
+			<div class="swiper-pagination slide__pagination"></div>
 		</div>
 	</div>
 </section>
