--- a/src/scss/components/_slide.scss
+++ b/src/scss/components/_slide.scss
@@ -1,12 +1,12 @@
 .slide {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
 
 	&__info {
-		max-width: 40%;
+		max-width: 45%;
 		display: flex;
 		flex-direction: column;
+		margin-left: 260px;
 	}
 
 	&__prices {
@@ -49,5 +49,9 @@
 		font-size: 14px;
 		line-height: 120%;
 		margin-bottom: 50px;
+	}
+
+	&__pagination {
+		bottom: 32px !important;
 	}
 }
