--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
 <section class="advantages">
 	<div class="container">
-		<ul class="advantages__list">
+		<ul class="advantages__list list-reset">
 			<li class="advantages__item">
 				<img
 					loading="lazy"
@@ -11,7 +11,7 @@
 					alt="Иконка доставки"
 				/>
 				<h4 class="advantages__title">Fast shipping</h4>
-				<p class="advantages__title">
+				<p class="advantages__text">
 					We ship our in-stock cabinets with 1-2 business days.
 				</p>
 			</li>
@@ -25,7 +25,7 @@
 					alt="Иконка лайк в рамке"
 				/>
 				<h4 class="advantages__title">100% CUSTOMER SATISFACTION</h4>
-				<p class="advantages__title">
+				<p class="advantages__text">
 					We stand behind all of our high-quality products and offer a
 					1-Years manufacturer’s warranty
 				</p>
@@ -40,7 +40,7 @@
 					alt="Иконка куба в рамке"
 				/>
 				<h4 class="advantages__title">CURBSIDE DELIVERY</h4>
-				<p class="advantages__title">
+				<p class="advantages__text">
 					Bulky Items Such As Vanities Or Countertops We Ship Only
 					With The Curbside Delivery. More Information You Can Read At
 					The Shipping And Delivery Section.
@@ -56,10 +56,9 @@
 					alt="Иконка пользователя в рамке"
 				/>
 				<h4 class="advantages__title">CURBSIDE DELIVERY</h4>
-				<p class="advantages__title">
-					Bulky Items Such As Vanities Or Countertops We Ship Only
-					With The Curbside Delivery. More Information You Can Read At
-					The Shipping And Delivery Section.
+				<p class="advantages__text">
+					Do you have any questions? Please feel free to give us a
+					CALL or TXT. We love to talk to you!
 				</p>
 			</li>
 		</ul>
