--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,3 +13,5 @@
 @import "./components/slide";
 @import "./components/swiper";
 @import "./components/advantages";
+@import "./components/shop";
+@import "./components/title";
