reviews page added + slider divided

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,20 +1,20 @@
 <section class="hero">
 	<div class="container-smaller">
-		<div class="swiper">
+		<div class="swiper swiper-1">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide slide">
+				<div class="swiper-slide slide-1">
 					<img src="./img/slide1img.png" alt="Изображение слайда" />
-					<div class="slide__info">
-						<div class="slide__prices list-reset">
-							<div class="slide__price slide__price-old">
+					<div class="slide-1__info">
+						<div class="slide-1__prices list-reset">
+							<div class="slide-1__price slide-1__price-old">
 								$2,000.00
 							</div>
-							<div class="slide__price">$1,475.00</div>
+							<div class="slide-1__price">$1,475.00</div>
 						</div>
-						<h3 class="slide__title">
+						<h3 class="slide-1__title">
 							Willow Collections Santa Monica Solid Teak
 						</h3>
-						<p class="slide__text">
+						<p class="slide-1__text">
 							Wood Right Vanity in Grey Washed with 5 cm Calacatta
 							Quartz
 						</p>
@@ -25,19 +25,19 @@
 						</div>
 					</div>
 				</div>
-				<div class="swiper-slide slide">
+				<div class="swiper-slide slide-1">
 					<img src="./img/slide1img.png" alt="Изображение слайда" />
-					<div class="slide__info">
-						<div class="slide__prices list-reset">
-							<div class="slide__price slide__price-old">
+					<div class="slide-1__info">
+						<div class="slide-1__prices list-reset">
+							<div class="slide__price slide-1__price-old">
 								$2,000.00
 							</div>
-							<div class="slide__price">$1,475.00</div>
+							<div class="slide-1__price">$1,475.00</div>
 						</div>
-						<h3 class="slide__title">
+						<h3 class="slide-1__title">
 							Willow Collections Santa Monica Solid Teak
 						</h3>
-						<p class="slide__text">
+						<p class="slide-1__text">
 							Wood Right Vanity in Grey Washed with 5 cm Calacatta
 							Quartz
 						</p>
@@ -48,17 +48,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="swiper-slide slide">
+				<div class="swiper-slide slide-1">
 					<img src="./img/slide1img.png" alt="Изображение слайда" />
-					<div class="slide__info">
-						<div class="slide__prices list-reset">
-							<div class="slide__price slide__price-old">
+					<div class="slide-1__info">
+						<div class="slide-1__prices list-reset">
+							<div class="slide-1__price slide-1__price-old">
 								$2,000.00
 							</div>
-							<div class="slide__price">$1,475.00</div>
+							<div class="slide-1__price">$1,475.00</div>
 						</div>
-						<h3 class="slide__title">Третий слайд</h3>
-						<p class="slide__text">
+						<h3 class="slide-1__title">Третий слайд</h3>
+						<p class="slide-1__text">
 							Wood Right Vanity in Grey Washed with 5 cm Calacatta
 							Quartz
 						</p>
@@ -69,17 +69,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="swiper-slide slide">
+				<div class="swiper-slide slide-1">
 					<img src="./img/slide1img.png" alt="Изображение слайда" />
-					<div class="slide__info">
-						<div class="slide__prices list-reset">
-							<div class="slide__price slide__price-old">
+					<div class="slide-1__info">
+						<div class="slide-1__prices list-reset">
+							<div class="slide-1__price slide-1__price-old">
 								$2,000.00
 							</div>
-							<div class="slide__price">$1,475.00</div>
+							<div class="slide-1__price">$1,475.00</div>
 						</div>
-						<h3 class="slide__title">Четверный слайд</h3>
-						<p class="slide__text">
+						<h3 class="slide-1__title">Четверный слайд</h3>
+						<p class="slide-1__text">
 							Wood Right Vanity in Grey Washed with 5 cm Calacatta
 							Quartz
 						</p>
@@ -91,7 +91,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="swiper-pagination slide__pagination"></div>
+			<div class="swiper-pagination slide-1__pagination"></div>
 		</div>
 	</div>
 </section>
