second slider cart finished

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,20 +1,22 @@
 <section class="hero">
 	<div class="container-smaller">
-		<div class="swiper swiper-1">
+		<div class="swiper swiper-hero">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide slide-1">
+				<div class="swiper-slide slide-hero">
 					<img src="./img/slide1img.png" alt="Изображение слайда" />
-					<div class="slide-1__info">
-						<div class="slide-1__prices list-reset">
-							<div class="slide-1__price slide-1__price-old">
+					<div class="slide__info-hero">
+						<div class="slide__prices-hero list-reset">
+							<div
+								class="slide__price-hero slide__price-old-hero"
+							>
 								$2,000.00
 							</div>
-							<div class="slide-1__price">$1,475.00</div>
+							<div class="slide__price-hero">$1,475.00</div>
 						</div>
-						<h3 class="slide-1__title">
+						<h3 class="slide__title-hero">
 							Willow Collections Santa Monica Solid Teak
 						</h3>
-						<p class="slide-1__text">
+						<p class="slide__text-hero">
 							Wood Right Vanity in Grey Washed with 5 cm Calacatta
 							Quartz
 						</p>
@@ -25,19 +27,19 @@
 						</div>
 					</div>
 				</div>
-				<div class="swiper-slide slide-1">
+				<div class="swiper-slide slide-hero">
 					<img src="./img/slide1img.png" alt="Изображение слайда" />
-					<div class="slide-1__info">
-						<div class="slide-1__prices list-reset">
-							<div class="slide__price slide-1__price-old">
+					<div class="slide__info-hero">
+						<div class="slide__prices-hero list-reset">
+							<div class="slide__price slide__price-old-hero">
 								$2,000.00
 							</div>
-							<div class="slide-1__price">$1,475.00</div>
+							<div class="slide__price-hero">$1,475.00</div>
 						</div>
-						<h3 class="slide-1__title">
+						<h3 class="slide__title-hero">
 							Willow Collections Santa Monica Solid Teak
 						</h3>
-						<p class="slide-1__text">
+						<p class="slide__text-hero">
 							Wood Right Vanity in Grey Washed with 5 cm Calacatta
 							Quartz
 						</p>
@@ -48,17 +50,19 @@
 						</div>
 					</div>
 				</div>
-				<div class="swiper-slide slide-1">
+				<div class="swiper-slide slide-hero">
 					<img src="./img/slide1img.png" alt="Изображение слайда" />
-					<div class="slide-1__info">
-						<div class="slide-1__prices list-reset">
-							<div class="slide-1__price slide-1__price-old">
+					<div class="slide__info-hero">
+						<div class="slide__prices-hero list-reset">
+							<div
+								class="slide__price-hero slide__price-old-hero"
+							>
 								$2,000.00
 							</div>
-							<div class="slide-1__price">$1,475.00</div>
+							<div class="slide__price-hero">$1,475.00</div>
 						</div>
-						<h3 class="slide-1__title">Третий слайд</h3>
-						<p class="slide-1__text">
+						<h3 class="slide__title-hero">Третий слайд</h3>
+						<p class="slide-hero__text">
 							Wood Right Vanity in Grey Washed with 5 cm Calacatta
 							Quartz
 						</p>
@@ -69,17 +73,19 @@
 						</div>
 					</div>
 				</div>
-				<div class="swiper-slide slide-1">
+				<div class="swiper-slide slide-hero">
 					<img src="./img/slide1img.png" alt="Изображение слайда" />
-					<div class="slide-1__info">
-						<div class="slide-1__prices list-reset">
-							<div class="slide-1__price slide-1__price-old">
+					<div class="slide__info-hero">
+						<div class="slide__prices-hero list-reset">
+							<div
+								class="slide__price-hero slide__price-old-hero"
+							>
 								$2,000.00
 							</div>
-							<div class="slide-1__price">$1,475.00</div>
+							<div class="slide__price-hero">$1,475.00</div>
 						</div>
-						<h3 class="slide-1__title">Четверный слайд</h3>
-						<p class="slide-1__text">
+						<h3 class="slide__title-hero">Четверный слайд</h3>
+						<p class="slide__text-hero">
 							Wood Right Vanity in Grey Washed with 5 cm Calacatta
 							Quartz
 						</p>
@@ -91,7 +97,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="swiper-pagination slide-1__pagination"></div>
+			<div class="swiper-pagination slide__pagination-hero"></div>
 		</div>
 	</div>
 </section>
