--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -5,13 +5,12 @@
 			<div class="swiper-wrapper">
 				<div class="swiper-slide slide-reviews">
 					<div class="slide__header">
-						<div class="slide__image">
-							<img
-								src="./img/author-3.png"
-								alt="Изображение автора"
-							/>
-						</div>
-						<div class="slide__info">
+						<img
+							src="./img/author-3.png"
+							class="slide__img"
+							alt="Изображение автора"
+						/>
+						<div class="slide__info-reviews">
 							<div class="slide__info-top">
 								<div class="slide__stars">
 									<img
@@ -52,8 +51,330 @@
 						feugait Schnaps ei. Sea purto singulis te
 					</p>
 				</div>
+				<div class="swiper-slide slide-reviews">
+					<div class="slide__header">
+						<img
+							src="./img/author-1.png"
+							class="slide__img"
+							alt="Изображение автора"
+						/>
+						<div class="slide__info-reviews">
+							<div class="slide__info-top">
+								<div class="slide__stars">
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+								</div>
+								<div class="slide__date">Jan 27, 2022</div>
+							</div>
+							<div class="slide__author">Frank Zimmerman</div>
+						</div>
+					</div>
+					<p class="slide__text">
+						Meliore persecuti et Ich bin ein Berliner Te oratio
+						utamur vix. Exerci Kirschkerne eu per. Principes
+						complectitur eos genau His illud moderatius ut, at
+						Freude schöner Götterfunken omnis minim epicurei, natum
+						feugait Schnaps ei. Sea purto singulis te
+					</p>
+				</div>
+				<div class="swiper-slide slide-reviews">
+					<div class="slide__header">
+						<img
+							src="./img/author-2.png"
+							class="slide__img"
+							alt="Изображение автора"
+						/>
+						<div class="slide__info-reviews">
+							<div class="slide__info-top">
+								<div class="slide__stars">
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+								</div>
+								<div class="slide__date">Jan 27, 2022</div>
+							</div>
+							<div class="slide__author">Frank Zimmerman</div>
+						</div>
+					</div>
+					<p class="slide__text">
+						Meliore persecuti et Ich bin ein Berliner Te oratio
+						utamur vix. Exerci Kirschkerne eu per. Principes
+						complectitur eos genau His illud moderatius ut, at
+						Freude schöner Götterfunken omnis minim epicurei, natum
+						feugait Schnaps ei. Sea purto singulis te
+					</p>
+				</div>
+				<div class="swiper-slide slide-reviews">
+					<div class="slide__header">
+						<img
+							src="./img/author-3.png"
+							class="slide__img"
+							alt="Изображение автора"
+						/>
+						<div class="slide__info-reviews">
+							<div class="slide__info-top">
+								<div class="slide__stars">
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+								</div>
+								<div class="slide__date">Jan 27, 2022</div>
+							</div>
+							<div class="slide__author">Frank Zimmerman</div>
+						</div>
+					</div>
+					<p class="slide__text">
+						Meliore persecuti et Ich bin ein Berliner Te oratio
+						utamur vix. Exerci Kirschkerne eu per. Principes
+						complectitur eos genau His illud moderatius ut, at
+						Freude schöner Götterfunken omnis minim epicurei, natum
+						feugait Schnaps ei. Sea purto singulis te
+					</p>
+				</div>
+				<div class="swiper-slide slide-reviews">
+					<div class="slide__header">
+						<img
+							src="./img/author-1.png"
+							class="slide__img"
+							alt="Изображение автора"
+						/>
+						<div class="slide__info-reviews">
+							<div class="slide__info-top">
+								<div class="slide__stars">
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+								</div>
+								<div class="slide__date">Jan 27, 2022</div>
+							</div>
+							<div class="slide__author">Frank Zimmerman</div>
+						</div>
+					</div>
+					<p class="slide__text">
+						Meliore persecuti et Ich bin ein Berliner Te oratio
+						utamur vix. Exerci Kirschkerne eu per. Principes
+						complectitur eos genau His illud moderatius ut, at
+						Freude schöner Götterfunken omnis minim epicurei, natum
+						feugait Schnaps ei. Sea purto singulis te
+					</p>
+				</div>
+				<div class="swiper-slide slide-reviews">
+					<div class="slide__header">
+						<img
+							src="./img/author-2.png"
+							class="slide__img"
+							alt="Изображение автора"
+						/>
+						<div class="slide__info-reviews">
+							<div class="slide__info-top">
+								<div class="slide__stars">
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+									<img
+										loading="lazy"
+										src="./img/star.svg"
+										class="image"
+										width="18"
+										height="18"
+										alt="Изображение звезды"
+									/>
+								</div>
+								<div class="slide__date">Jan 27, 2022</div>
+							</div>
+							<div class="slide__author">Frank Zimmerman</div>
+						</div>
+					</div>
+					<p class="slide__text">
+						Meliore persecuti et Ich bin ein Berliner Te oratio
+						utamur vix. Exerci Kirschkerne eu per. Principes
+						complectitur eos genau His illud moderatius ut, at
+						Freude schöner Götterfunken omnis minim epicurei, natum
+						feugait Schnaps ei. Sea purto singulis te
+					</p>
+				</div>
 			</div>
-			<div class="swiper-pagination slide__pagination"></div>
+			<div
+				class="swiper-pagination swiper-pagination-reviews slide__pagination-reviews"
+			></div>
 		</div>
 	</div>
 </section>
