--- a/src/scss/components/_slide.scss
+++ b/src/scss/components/_slide.scss
@@ -5,9 +5,11 @@
 	}
 
 	&-reviews {
-		width: 33%;
 		padding: 30px;
 		background-color: var(--white-color);
+		max-width: 370px;
+		margin-right: 40px;
+		margin-top: 50px;
 	}
 
 	&__info {
@@ -16,6 +18,17 @@
 			display: flex;
 			flex-direction: column;
 			margin-left: 260px;
+		}
+		&-reviews {
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-evenly;
+		}
+		&-top {
+			width: inherit;
+			display: flex;
+			justify-content: space-between;
 		}
 	}
 
@@ -58,6 +71,10 @@
 	}
 
 	&__text {
+		font-weight: 300;
+		font-size: 14px;
+		line-height: 218%;
+		color: var(--black-color);
 		&-hero {
 			margin: 0;
 			color: var(--black-color);
@@ -72,10 +89,48 @@
 		&-hero {
 			bottom: 32px !important;
 		}
+		&-reviews {
+			position: absolute;
+			top: 8px;
+			align-items: flex-start !important;
+			justify-content: flex-end !important;
+		}
 	}
 
-	&__image {
-		width: 80px;
+	&__header {
+		display: flex;
+	}
+
+	&__author {
+		font-weight: 400;
+		font-size: 18px;
+		line-height: 120%;
+		color: var(--black-color);
+	}
+
+	&__date {
+		font-weight: 300;
+		font-size: 14px;
+		line-height: 218%;
+		color: var(--grey-color);
+	}
+
+	&__stars {
+		display: flex;
+		align-items: center;
+	}
+
+	&__img {
+		width: auto;
 		height: 80px;
+		margin-right: 30px;
+	}
+
+	&__bullet {
+		&-reviews {
+			&:not(:last-child) {
+				margin-right: 20px;
+			}
+		}
 	}
 }
