--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,6 +1,6 @@
 <section class="reviews">
 	<div class="container">
-		<div class="swiper swiper-reviews">
+		<div class="swiper reviews__swiper">
 			<h2 class="title__primary">Reviews</h2>
 			<div class="swiper-wrapper">
 				<div class="swiper-slide slide-reviews">
