--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -25,5 +25,6 @@
 	--grey-color: #6e6e73;
 	--darker-grey-color: #333333;
 	--black-color: #1d1d1f;
+	--black-color-ligth: rgba(29, 29, 31, 0.7);
 	--secondary-color: #efe5d6;
 }
