--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -27,4 +27,7 @@
 	--black-color: #1d1d1f;
 	--black-color-ligth: rgba(29, 29, 31, 0.7);
 	--secondary-color: #efe5d6;
+	--red-color: #ff9595;
+	--yellow-color: #ffe895;
+	--blue-color: #95b9ff;
 }
