--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,17 +10,9 @@
 						<span class="products__btn-text">Quick preview</span>
 					</button>
 					<button class="btn-reset products__btn products__btn-heart">
-						<img
-							loading="lazy"
-							src="./img/white-heart.svg"
-							class="image products__heart"
-							width="24"
-							height="24"
-							alt="Иконка черного сердца"
-						/>
-						<!-- <svg class="products__heart">
-							<use xlink:href="img/sprite.svg#heart"></use>
-						</svg> -->
+						<svg class="products__heart products__heart-white">
+							<use xlink:href="img/sprite.svg#like-heart"></use>
+						</svg>
 					</button>
 				</div>
 				<img
@@ -28,27 +20,207 @@
 					class="image products__img"
 					alt="Изображение товара"
 				/>
+				<div class="products__info">
+					<h6 class="products__title">Free Standing Single Sink</h6>
+					<h5 class="products__price">$ 1,575.00</h5>
+					<div class="products__colors">
+						<ul class="list-reset colors__list">
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-red"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-yellow"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-blue"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+						</ul>
+						<div class="colors__title">COLOR CHANGE</div>
+					</div>
+				</div>
 			</div>
 			<div class="products__item">
+				<div class="products__actions">
+					<button
+						class="btn-reset products__btn products__btn-preview"
+					>
+						<span class="products__btn-text">Quick preview</span>
+					</button>
+					<button class="btn-reset products__btn products__btn-heart">
+						<svg class="products__heart products__heart-white">
+							<use xlink:href="img/sprite.svg#like-heart"></use>
+						</svg>
+					</button>
+				</div>
 				<img
 					src="./img/product-2.png"
 					class="image products__img"
 					alt="Изображение товара"
 				/>
+				<div class="products__info">
+					<h6 class="products__title">Free Standing Single Sink</h6>
+					<h5 class="products__price">$ 1,575.00</h5>
+					<div class="products__colors">
+						<ul class="list-reset colors__list">
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-red"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-yellow"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-blue"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+						</ul>
+						<div class="colors__title">COLOR CHANGE</div>
+					</div>
+				</div>
 			</div>
 			<div class="products__item">
+				<div class="products__actions">
+					<button
+						class="btn-reset products__btn products__btn-preview"
+					>
+						<span class="products__btn-text">Quick preview</span>
+					</button>
+					<button class="btn-reset products__btn products__btn-heart">
+						<svg class="products__heart products__heart-white">
+							<use xlink:href="img/sprite.svg#like-heart"></use>
+						</svg>
+					</button>
+				</div>
 				<img
 					src="./img/product-3.png"
 					class="image products__img"
 					alt="Изображение товара"
 				/>
+				<div class="products__info">
+					<h6 class="products__title">Free Standing Single Sink</h6>
+					<h5 class="products__price">$ 1,575.00</h5>
+					<div class="products__colors">
+						<ul class="list-reset colors__list">
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-red"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-yellow"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-blue"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+						</ul>
+						<div class="colors__title">COLOR CHANGE</div>
+					</div>
+				</div>
 			</div>
 			<div class="products__item">
+				<div class="products__actions">
+					<button
+						class="btn-reset products__btn products__btn-preview"
+					>
+						<span class="products__btn-text">Quick preview</span>
+					</button>
+					<button class="btn-reset products__btn products__btn-heart">
+						<svg class="products__heart products__heart-white">
+							<use xlink:href="img/sprite.svg#like-heart"></use>
+						</svg>
+					</button>
+				</div>
 				<img
 					src="./img/product-4.png"
 					class="image products__img"
 					alt="Изображение товара"
 				/>
+				<div class="products__info">
+					<h6 class="products__title">Free Standing Single Sink</h6>
+					<h5 class="products__price">$ 1,575.00</h5>
+					<div class="products__colors">
+						<ul class="list-reset colors__list">
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-red"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-yellow"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+							<li class="colors__item">
+								<svg
+									class="colors__ellipse colors__ellipse-blue"
+								>
+									<use
+										xlink:href="img/sprite.svg#ellipse"
+									></use>
+								</svg>
+							</li>
+						</ul>
+						<div class="colors__title">COLOR CHANGE</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
