--- a/src/scss/components/_products.scss
+++ b/src/scss/components/_products.scss
@@ -55,7 +55,38 @@
 		}
 	}
 	&__heart {
+		width: 24px;
+		height: 24px;
 		margin-right: -1px;
 		margin-bottom: -1px;
+		fill: transparent;
+		stroke: var(--white-color);
+		&-white {
+			fill: var(--white-color);
+		}
+	}
+	&__info {
+		padding: 30px;
+		background-color: var(--white-color);
+	}
+	&__title {
+		color: var(--black-color);
+		margin: 0;
+		font-weight: 300;
+		font-size: 18px;
+		line-height: 120%;
+	}
+	&__price {
+		color: var(--black-color);
+		margin: 0;
+		margin-top: 4px;
+		margin-bottom: 28px;
+		font-weight: 700;
+		font-size: 24px;
+		line-height: 150%;
+	}
+	&__colors {
+		display: flex;
+		align-items: center;
 	}
 }
