reviews buttons update

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,6 +2,18 @@
 	<div class="container">
 		<div class="swiper reviews__swiper">
 			<h2 class="title__primary">Reviews</h2>
+			<button
+				class="reviews__btn reviews__btn-left swiper-button-prev-reviews"
+			>
+				<svg class="reviews__arrow reviews__arrow-left">
+					<use xlink:href="img/sprite.svg#arrow"></use>
+				</svg>
+			</button>
+			<button class="reviews__btn swiper-button-next-reviews">
+				<svg class="reviews__arrow reviews__arrow-right">
+					<use xlink:href="img/sprite.svg#arrow"></use>
+				</svg>
+			</button>
 			<div class="swiper-wrapper">
 				<div class="swiper-slide slide-reviews">
 					<div class="slide__header">
