--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="container-bigger header__container">
-		<button class="btn-reset btn__primary">Call Back</button>
+		<button class="header__button btn-reset btn__primary">Call Back</button>
 		<div class="container-smaller header__content">
 			<nav class="nav" title="Навигационная панель">
 				<ul class="nav__list list-reset">
@@ -62,7 +62,7 @@
 					<img
 						loading="lazy"
 						src="./img/search.svg"
-						class="image"
+						class="image activity__image"
 						width="20"
 						height="20"
 						alt="Иконка поиска"
@@ -73,7 +73,7 @@
 					<img
 						loading="lazy"
 						src="./img/heart.svg"
-						class="image"
+						class="image activity__image"
 						width="20"
 						height="20"
 						alt="Иконка сердца"
@@ -84,7 +84,7 @@
 					<img
 						loading="lazy"
 						src="./img/bag.svg"
-						class="image"
+						class="image activity__image"
 						width="20"
 						height="20"
 						alt="Иконка корзины"
@@ -95,7 +95,7 @@
 					<img
 						loading="lazy"
 						src="./img/user.svg"
-						class="image"
+						class="image activity__image"
 						width="20"
 						height="20"
 						alt="Иконка личного кабинета"
