--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,11 @@
 		<div class="swiper swiper-hero">
 			<div class="swiper-wrapper">
 				<div class="swiper-slide slide-hero">
-					<img src="./img/slide1img.png" alt="Изображение слайда" />
+					<img
+						src="./img/slide1img.png"
+						class="slide__image-hero"
+						alt="Изображение слайда"
+					/>
 					<div class="slide__info-hero">
 						<div class="slide__prices-hero list-reset">
 							<div
@@ -28,7 +32,11 @@
 					</div>
 				</div>
 				<div class="swiper-slide slide-hero">
-					<img src="./img/slide1img.png" alt="Изображение слайда" />
+					<img
+						src="./img/slide1img.png"
+						class="slide__image-hero"
+						alt="Изображение слайда"
+					/>
 					<div class="slide__info-hero">
 						<div class="slide__prices-hero list-reset">
 							<div class="slide__price slide__price-old-hero">
@@ -51,7 +59,11 @@
 					</div>
 				</div>
 				<div class="swiper-slide slide-hero">
-					<img src="./img/slide1img.png" alt="Изображение слайда" />
+					<img
+						src="./img/slide1img.png"
+						class="slide__image-hero"
+						alt="Изображение слайда"
+					/>
 					<div class="slide__info-hero">
 						<div class="slide__prices-hero list-reset">
 							<div
@@ -74,7 +86,11 @@
 					</div>
 				</div>
 				<div class="swiper-slide slide-hero">
-					<img src="./img/slide1img.png" alt="Изображение слайда" />
+					<img
+						src="./img/slide1img.png"
+						class="slide__image-hero"
+						alt="Изображение слайда"
+					/>
 					<div class="slide__info-hero">
 						<div class="slide__prices-hero list-reset">
 							<div
