--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -27,3 +27,33 @@
 		}
 	}
 }
+
+@media (max-width: 1024px) {
+	.btn {
+		&__secondary {
+			padding: 9px 14px;
+			&:last-child {
+				padding: 9px 4px;
+				padding-left: 10px;
+			}
+		}
+
+		&__text {
+			&-secondary {
+				margin-right: 0;
+			}
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.btn {
+		&__text {
+			&-secondary {
+				width: min-content;
+				font-size: 16px;
+				margin-right: 8px;
+			}
+		}
+	}
+}
