--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -47,3 +47,39 @@
 		}
 	}
 }
+
+@media (max-width: 1440px) {
+	.nav {
+		&__item {
+			&-left {
+				&:not(:last-child) {
+					margin-right: 20px;
+				}
+			}
+			&-right {
+				&:not(:last-child) {
+					margin-right: 20px;
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 1024px) {
+	.nav {
+		flex-direction: column;
+		gap: 15px;
+	}
+}
+
+@media (max-width: 768px) {
+	.nav {
+		&__item {
+			&-left {
+				&:not(:last-child) {
+					margin-right: 10px;
+				}
+			}
+		}
+	}
+}
