--- a/src/scss/components/_products.scss
+++ b/src/scss/components/_products.scss
@@ -21,6 +21,7 @@
 			drop-shadow(0px 2px 6px rgba(0, 0, 0, 0.04))
 			drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.04));
 		border-radius: 4px;
+		width: 100%;
 	}
 	&__actions {
 		position: absolute;
@@ -89,5 +90,30 @@
 	&__colors {
 		display: flex;
 		align-items: center;
+	}
+}
+
+@media (max-width: 1024px) {
+	.products {
+		&__item {
+			grid-column: 6 span;
+		}
+		&__list {
+			width: 90%;
+			margin: 0 auto;
+			margin-top: 50px;
+			gap: 40px;
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.products {
+		&__item {
+			grid-column: 6 span;
+		}
+		&__list {
+			margin-top: 40px;
+		}
 	}
 }
