--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -83,3 +83,16 @@
 		}
 	}
 }
+
+@media (max-width: 425px) {
+	.nav {
+		position: absolute;
+		overflow: hidden;
+		margin: -1px;
+		border: 0;
+		padding: 0;
+		width: 1px;
+		height: 1px;
+		clip: rect(0 0 0 0);
+	}
+}
