menu 50% + 768px adapt fixed

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,6 +35,14 @@
 					alt="Логотип компании"
 					class="nav__logo"
 				/>
+				<button
+					class="burger nav__burger"
+					aria-label="Открыть меню"
+					aria-expanded="false"
+					data-burger
+				>
+					<span class="burger__line"></span>
+				</button>
 				<ul class="nav__list list-reset">
 					<li class="nav__item nav__item-right">
 						<a href="#" class="nav__link">Returns</a>
