--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,3 +19,5 @@
 @import "./components/products";
 @import "./components/colors";
 @import "./components/making";
+@import "./components/menu";
+@import "./components/burger";
