--- a/src/scss/components/_products.scss
+++ b/src/scss/components/_products.scss
@@ -85,7 +85,7 @@
 		margin-bottom: 28px;
 		font-weight: 700;
 		font-size: 24px;
-		line-height: 150%;`
+		line-height: 150%;
 	}
 	&__colors {
 		display: flex;
