адаптив (половина 425) + gsap

--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -1,1 +1,62 @@
-<div class="menu" data-menu></div>
+<div class="menu">
+	<ul class="activity__list activity__list-menu list-reset">
+		<li class="activity__item">
+			<a href="#">
+				<svg class="activity__icon activity__icon-search">
+					<use xlink:href="img/sprite.svg#search"></use></svg
+			></a>
+		</li>
+		<li class="activity__item">
+			<a href="#">
+				<svg class="activity__icon activity__icon-heart">
+					<use xlink:href="img/sprite.svg#like-heart"></use></svg
+			></a>
+		</li>
+		<li class="activity__item">
+			<a href="#">
+				<svg class="activity__icon activity__icon-bag">
+					<use xlink:href="img/sprite.svg#bag"></use></svg
+			></a>
+		</li>
+		<li class="activity__item">
+			<a href="#">
+				<svg class="activity__icon activity__icon-user">
+					<use xlink:href="img/sprite.svg#user"></use></svg
+			></a>
+		</li>
+	</ul>
+	<ul class="menu__list list-reset">
+		<li class="menu__item">
+			<a href="#" class="menu__link">Home</a>
+		</li>
+		<li class="menu__item">
+			<a href="#" class="menu__link">Shop</a>
+		</li>
+		<li class="menu__item">
+			<a href="#" class="menu__link">ShowRoom</a>
+		</li>
+		<li class="menu__item">
+			<a href="#" class="menu__link">Shipping and delivery</a>
+		</li>
+		<li class="menu__item">
+			<a href="#" class="menu__link">Warranty</a>
+		</li>
+		<li class="menu__item">
+			<a href="#" class="menu__link">Returns</a>
+		</li>
+		<li class="menu__item">
+			<a href="#" class="menu__link">Contact Us</a>
+		</li>
+		<li class="menu__item">
+			<a href="#" class="menu__link"
+				>FAQ<span class="text-lowercase">s</span></a
+			>
+		</li>
+		<li class="menu__item">
+			<a href="#" class="menu__link">About Us</a>
+		</li>
+		<li class="menu__item">
+			<a href="#" class="menu__link">Warranty</a>
+		</li>
+	</ul>
+</div>
