--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -2,3 +2,9 @@
 	background-color: var(--white-color);
 	padding-top: 70px;
 }
+
+@media (max-width: 425px) {
+	.hero {
+		padding-top: 50px;
+	}
+}
