--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,12 +35,7 @@
 					alt="Логотип компании"
 					class="nav__logo"
 				/>
-				<button
-					class="burger nav__burger"
-					aria-label="Открыть меню"
-					aria-expanded="false"
-					data-burger
-				>
+				<button class="burger nav__burger" aria-label="Открыть меню">
 					<span class="burger__line"></span>
 				</button>
 				<ul class="nav__list list-reset">
