--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -47,3 +47,16 @@
 		}
 	}
 }
+
+@media (max-width: 425px) {
+	.advantages {
+		&__list {
+			column-gap: 20px;
+			row-gap: 6px;
+			padding: 15px 0;
+		}
+		&__text {
+			margin-bottom: 0;
+		}
+	}
+}
