--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -1,11 +1,45 @@
 .menu {
 	display: none;
-	&--active {
+	position: fixed;
+	transform: translateX(100%);
+	// visibility: hidden;
+	opacity: 0;
+	// transition: opacity 1s ease, visibility 1s ease, transform 1s ease;
+	// &--active {
+	// 	visibility: visible;
+	// 	opacity: 1;
+	// 	transform: translateX(0);
+	// 	transition: opacity 0.5s ease, visibility 0.5s ease, transform 0.5s ease;
+	width: 100%;
+	height: 100vh;
+	background: var(--black-color);
+	z-index: 999;
+	padding: 40px;
+	&__link {
+		// opacity: 0;
+		// transition: opacity 1s ease;
+		color: var(--white-color);
+		font-weight: 400;
+		font-size: 32px;
+		line-height: 50px;
+		text-transform: uppercase;
+	}
+	&__list {
+		margin-top: 40px;
+	}
+}
+
+@media (max-width: 425px) {
+	.menu {
 		display: block;
-		position: fixed;
-		width: 100%;
-		height: 100vh;
-		background-color: rgba(0, 0, 0, 0.703);
-		z-index: 999;
+		&--active {
+			.activity {
+				&__list {
+					display: flex;
+					opacity: 1;
+					transition: opacity 1s ease;
+				}
+			}
+		}
 	}
 }
