--- a/src/scss/components/_shop.scss
+++ b/src/scss/components/_shop.scss
@@ -22,3 +22,11 @@
 		transform: translate(-50%, -50%);
 	}
 }
+
+@media (max-width: 425px) {
+	.shop {
+		&__title {
+			padding: 50px 0;
+		}
+	}
+}
